--- a/css/index.css
+++ b/css/index.css
@@ -24,4 +24,78 @@ h2 {
   #links {
     font-style: italic;
     color: greenyellow;
+  }  
+  /* BIG tablet */
+  @media only screen and (max-width: 1300px) {
+    body {
+      background-color: rgb(19, 21, 22);
+    } 
+    #Experience {
+      color: rgba(45, 212, 78, 0.6);
+      font-size: large;
+      font-style: oblique;
+      font-weight: 600;
+    }
+    #EH h2 {
+      color: aliceblue;
+      font-weight: 700;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+ }
+ /*  med tablet */
+  @media only screen and (max-width: 810px) {
+    body {
+      background-color: rgb(45, 219, 103);
+    }
+    #bout {
+      text-align: center;
+      color: rgb(47, 50, 53);
+      font-size: medium;
+      font-style: normal;
+      font-weight: 200;
+    }
+    #Experience {
+      color: rgba(57, 52, 184, 0.6);
+      font-size: large;
+      font-style: oblique;
+      font-weight: 900;
+    }
+    
+    #EH h2 {
+      color: rgb(31, 49, 39);
+      font-weight: 700;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    #links {
+      font-style: italic;
+      font-weight: 700;
+      color: rgb(63, 83, 32);
+      text-align: center;
+    }
+  }
+  /* smallest it can go */
+  @media only screen and (max-width: 450px) {
+    body {
+      background-color: lightblue;
+    }
+    #bout {
+      text-align: center;
+      color: black;
+      font-size: larger;
+    }
+    #Experience {
+      color: black;
+      font-size: xx-large;
+    }
+    #EH h2 {
+      color: rgb(159, 36, 142);
+      font-weight: 700;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+    #links {
+      font-style: italic;
+      font-weight: 700;
+      color: rgb(63, 83, 32);
+      text-align: center;
+    }
   }
